  Fix issue MR-97 - Integrate Dutch translation
  Fix issue MR-98 - Integrate Russian and Ukranian translations
  Fix issue MR-99 - Integrate Spanish translation
  Fix issue MR-101 - Collapse all folders causes a NullReferenceException
  Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
  Fix issue MR-166 - Inheritance button is disabled on some connections
  Fix issue MR-172 - RDGatewayPassword is unencrypted in confCons.xml file
  Fix issue MR-176 - Del key while editing connection name triggers 'Delete Connection'
  Fix issue MR-181 - Sessions on startup
  Fix issue MR-196 - Cannot export list without usernames and passwords
  Fix issue MR-199 - when using screen inside putty, screen becomes dead when reduce mremoteNG
  Fix issue MR-202 - The Connection "Tab" show Ampersands as underscores.
  Fix issue MR-214 - Hostname/IP reset
  Fix issue MR-233 - Backslash at end of password prevents success of putty invocation and corresponding auto-logon
  Fix issue MR-277 - Inheritance configuration button not appear in configuration tab 
  Fix issue MR-284 - SSH: Text not showing properly
  Added compatibility check for "Use FIPS compliant algorithms" security setting.
  Improved reporting of errors when encrypting and decrypting connection files.
  Added partial Polish translation.
  The panel tabs are now hidden if only one panel is open.
  Fix focus issue with RDP connections when changing tabs.
  Show changes live as connection tabs are being dragged around to change their order.
  Updated PuTTY to version 0.62.
  Improved error handling when loading connection files.
  Fixed bugs with creating a new connection file.
  A backup of the connection file is saved when it is loaded. The most recent ten backup copies are kept.
  Added the option to use a smart card for RD Gateway credentials.
  Made the use of CredSSP for RDP connections optional.
  Updated VncSharpNG to version 1.2.4440.36644.
  Added debugging symbols for VncSharpNG.