@@ -16,6 +16,7 @@
   Fix issue MR-99 - Integrate Spanish translation
   Fix issue MR-101 - Collapse all folders causes a NullReferenceException
   Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
+  Fix issue MR-165 - Can't close About window if it is the last tab
   Fix issue MR-166 - Inheritance button is disabled on some connections
   Fix issue MR-172 - RDGatewayPassword is unencrypted in confCons.xml file
   Fix issue MR-176 - Del key while editing connection name triggers 'Delete Connection'
